"Switched from Ruby to Python and introduced load testing with Locust"
Updated the project to use a Python-based API instead of Ruby and added locust load testing which includes use of new locustfile.py for the purpose of extracting links. In web extraction functionality, different frequently visited URLs are included in the testing. Moreover, an update in 'docker-compose.yml' shows that API now depends upon 'locust' and the number of users is also specified. Also renamed 'test_results.csv' to 'final_results.csv' for clarity and understanding of test flow.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,25 @@
 services:
   api:
-    build: ./ruby_api
+    build: ./python_api
     environment:
     - REDIS_URL=redis://redis:6379
-    - USER_AMOUNT=500
+    - USER_AMOUNT=10
     image: linkextractor-api:step5-python
     ports:
     - 5000:5000
+  locust:
+    depends_on:
+    - api
+    environment:
+    - LOCUST_FILE=/mnt/locust/locustfile.py
+    - LOCUST_HOST=http://web:80
+    - USER_AMOUNT=10
+    image: locustio/locust
+    ports:
+    - 8089:8089
+    volumes:
+    - ./locustfile.py:/locustfile.py
+    command: -f /locustfile.py
   redis:
     image: redis
   web:
