"Refactored Ruby API to Python, added Locust load testing"
The API previously implemented in Ruby has been refactored to Python. Introduced load testing with Locust through a locustfile.py. The locustfile has been customised to extract links from a list of frequently visited URLs for web scraping functionality. Changes in docker-compose.yml reflect that the API now depends on Redis and locust service, with a number of users specified. Additionally, performance test results for cache enabled/disabled scenario were updated, enhancing test understanding.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,45 @@
+version: '3.4'
+
 services:
   api:
     build: ./python_api
     environment:
-    - USER_AMOUNT=10
+      - USER_AMOUNT=10
     image: linkextractor-api:step5-python
     ports:
-    - 5000:5000
+      - "5000:5000"
+    depends_on:
+      redis:
+        condition: service_healthy
+
+  locust:
+    command: -f /mnt/locust/locustfile.py
+    depends_on:
+      - api
+    environment:
+      - LOCUST_FILE=/mnt/locust/locustfile.py
+      - LOCUST_HOST=http://web:80
+      - USER_AMOUNT=10
+    image: locustio/locust
+    ports:
+      - "8089:8089"
+    volumes:
+      - ./locustfile.py:/mnt/locust/locustfile.py
+
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   web:
     build: ./www
     environment:
-    - API_ENDPOINT=http://api:5000/api/
+      - API_ENDPOINT=http://api:5000/api/
     image: linkextractor-web:step5-php
     ports:
-    - 80:80
-  locust:
-    depends_on:
-    - api
-    environment:
-    - LOCUST_FILE=/mnt/locust/locustfile.py
-    - LOCUST_HOST=http://web:80
-    - USER_AMOUNT=10
-    image: locustio/locust
-    ports:
-    - 8089:8089
-    volumes:
-    - ./locustfile.py:/locustfile.py
-    command: -f /locustfile.py
-version: '3'
+      - "80:80"
