"Switch to ruby_api in Docker and improve error handling in redis connection"
The container for the API service in Docker has been switched from Python to Ruby, and the API port number has been changed accordingly both in the docker-compose file and the web environment variables.

In addition, the Ruby API connection to Redis has been improved to provide better error handling. Specifically, in case of a missing link in Redis, it is now followed up by the extraction of links and their storage in Redis, and this change in state is reflected more precisely in the logs.

Moreover, '/hello' get request was added for testing connectivity issues.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,13 @@ version: '3.4'
 
 services:
   api:
-    build: ./python_api
+    build: ./ruby_api
     environment:
       - USER_AMOUNT=10
+      - REDIS_URL=redis://redis:6379
     image: linkextractor-api:step5-python
     ports:
-      - "5000:5000"
+      - "5000:4567"
     depends_on:
       redis:
         condition: service_healthy
@@ -39,7 +40,7 @@ services:
   web:
     build: ./www
     environment:
-      - API_ENDPOINT=http://api:5000/api/
+      - API_ENDPOINT=http://api:4567/api/
     image: linkextractor-web:step5-php
     ports:
       - "80:80"
